the best of th best

--- a/app/sass/_footer.scss
+++ b/app/sass/_footer.scss
@@ -1,6 +1,7 @@
 body {
-  background-color: #004c83;
+  background:orange;
   @media (max-width: 1200px) {
-   background: #000;
+   background: red;
+   color: #fff;
   }
 }
