--- a/app/css/all.css
+++ b/app/css/all.css
@@ -1,10 +1,35 @@
-body {
-  background: green;
+#header {
+  background: #ccc;
+  overflow: hidden;
+  height: 210px;
+  width: 100%;
+  background: rgba(204, 204, 204, 0.6);
 }
 
-@media (max-width: 1200px) {
-  body {
-    background: red;
-    color: #fff;
-  }
+#footer {
+  background: red;
+  width: 100%;
+  height: 110px;
+  margin-top: 50px;
+  position: relative;
+}
+
+#footer:after {
+  display: block;
+  clear: both;
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  background-image: url(../images/sprite.png);
+  background-position: 0px 0px;
+  width: 24px;
+  height: 24px;
+}
+
+.icon-home {
+  background-image: url(../images/sprite.png);
+  background-position: 0px 0px;
+  width: 24px;
+  height: 24px;
 }
