--- a/app/sass/_footer.scss
+++ b/app/sass/_footer.scss
@@ -1,7 +1,16 @@
-body {
-  background:green;
-  @media (max-width: 1200px) {
-   background: red;
-   color: #fff;
+#footer {
+  background:red;
+  width: 100%;
+  height: 110px;
+  margin-top: 50px;
+  position: relative;
+  &:after{
+  	display: block;
+  	clear: both;
+  	content: '';
+  	position: absolute;
+  	top: 0;
+  	right: 0;
+  	@include sprite($bank);
   }
 }
