--- a/app/sass/_sprite.scss
+++ b/app/sass/_sprite.scss
@@ -9,33 +9,132 @@
 //
 // At the bottom of this section, we provide information about the spritesheet itself
 // $spritesheet: width height image $spritesheet-sprites;
-$bank-name: 'bank';
-$bank-x: 0px;
-$bank-y: 0px;
-$bank-offset-x: 0px;
-$bank-offset-y: 0px;
-$bank-width: 24px;
-$bank-height: 24px;
-$bank-total-width: 53px;
-$bank-total-height: 24px;
-$bank-image: '../images/sprite.png';
-$bank: (0px, 0px, 0px, 0px, 24px, 24px, 53px, 24px, '../images/sprite.png', 'bank', );
-$bank2-name: 'bank2';
-$bank2-x: 29px;
-$bank2-y: 0px;
-$bank2-offset-x: -29px;
-$bank2-offset-y: 0px;
-$bank2-width: 24px;
-$bank2-height: 24px;
-$bank2-total-width: 53px;
-$bank2-total-height: 24px;
-$bank2-image: '../images/sprite.png';
-$bank2: (29px, 0px, -29px, 0px, 24px, 24px, 53px, 24px, '../images/sprite.png', 'bank2', );
-$spritesheet-width: 53px;
-$spritesheet-height: 24px;
+$ball-1-name: 'ball-1';
+$ball-1-x: 0px;
+$ball-1-y: 0px;
+$ball-1-offset-x: 0px;
+$ball-1-offset-y: 0px;
+$ball-1-width: 19px;
+$ball-1-height: 22px;
+$ball-1-total-width: 85px;
+$ball-1-total-height: 67px;
+$ball-1-image: '../images/sprite.png';
+$ball-1: (0px, 0px, 0px, 0px, 19px, 22px, 85px, 67px, '../images/sprite.png', 'ball-1', );
+$card-name: 'card';
+$card-x: 69px;
+$card-y: 0px;
+$card-offset-x: -69px;
+$card-offset-y: 0px;
+$card-width: 16px;
+$card-height: 16px;
+$card-total-width: 85px;
+$card-total-height: 67px;
+$card-image: '../images/sprite.png';
+$card: (69px, 0px, -69px, 0px, 16px, 16px, 85px, 67px, '../images/sprite.png', 'card', );
+$mail-active-name: 'mail-active';
+$mail-active-x: 39px;
+$mail-active-y: 49px;
+$mail-active-offset-x: -39px;
+$mail-active-offset-y: -49px;
+$mail-active-width: 16px;
+$mail-active-height: 11px;
+$mail-active-total-width: 85px;
+$mail-active-total-height: 67px;
+$mail-active-image: '../images/sprite.png';
+$mail-active: (39px, 49px, -39px, -49px, 16px, 11px, 85px, 67px, '../images/sprite.png', 'mail-active', );
+$mail-name: 'mail';
+$mail-x: 18px;
+$mail-y: 49px;
+$mail-offset-x: -18px;
+$mail-offset-y: -49px;
+$mail-width: 16px;
+$mail-height: 11px;
+$mail-total-width: 85px;
+$mail-total-height: 67px;
+$mail-image: '../images/sprite.png';
+$mail: (18px, 49px, -18px, -49px, 16px, 11px, 85px, 67px, '../images/sprite.png', 'mail', );
+$mtc-name: 'mtc';
+$mtc-x: 24px;
+$mtc-y: 0px;
+$mtc-offset-x: -24px;
+$mtc-offset-y: 0px;
+$mtc-width: 18px;
+$mtc-height: 17px;
+$mtc-total-width: 85px;
+$mtc-total-height: 67px;
+$mtc-image: '../images/sprite.png';
+$mtc: (24px, 0px, -24px, 0px, 18px, 17px, 85px, 67px, '../images/sprite.png', 'mtc', );
+$search-active-name: 'search-active';
+$search-active-x: 44px;
+$search-active-y: 27px;
+$search-active-offset-x: -44px;
+$search-active-offset-y: -27px;
+$search-active-width: 17px;
+$search-active-height: 17px;
+$search-active-total-width: 85px;
+$search-active-total-height: 67px;
+$search-active-image: '../images/sprite.png';
+$search-active: (44px, 27px, -44px, -27px, 17px, 17px, 85px, 67px, '../images/sprite.png', 'search-active', );
+$search-name: 'search';
+$search-x: 0px;
+$search-y: 27px;
+$search-offset-x: 0px;
+$search-offset-y: -27px;
+$search-width: 17px;
+$search-height: 17px;
+$search-total-width: 85px;
+$search-total-height: 67px;
+$search-image: '../images/sprite.png';
+$search: (0px, 27px, 0px, -27px, 17px, 17px, 85px, 67px, '../images/sprite.png', 'search', );
+$telegram-name: 'telegram';
+$telegram-x: 47px;
+$telegram-y: 0px;
+$telegram-offset-x: -47px;
+$telegram-offset-y: 0px;
+$telegram-width: 17px;
+$telegram-height: 17px;
+$telegram-total-width: 85px;
+$telegram-total-height: 67px;
+$telegram-image: '../images/sprite.png';
+$telegram: (47px, 0px, -47px, 0px, 17px, 17px, 85px, 67px, '../images/sprite.png', 'telegram', );
+$user-active-name: 'user-active';
+$user-active-x: 69px;
+$user-active-y: 21px;
+$user-active-offset-x: -69px;
+$user-active-offset-y: -21px;
+$user-active-width: 13px;
+$user-active-height: 18px;
+$user-active-total-width: 85px;
+$user-active-total-height: 67px;
+$user-active-image: '../images/sprite.png';
+$user-active: (69px, 21px, -69px, -21px, 13px, 18px, 85px, 67px, '../images/sprite.png', 'user-active', );
+$user-name: 'user';
+$user-x: 0px;
+$user-y: 49px;
+$user-offset-x: 0px;
+$user-offset-y: -49px;
+$user-width: 13px;
+$user-height: 18px;
+$user-total-width: 85px;
+$user-total-height: 67px;
+$user-image: '../images/sprite.png';
+$user: (0px, 49px, 0px, -49px, 13px, 18px, 85px, 67px, '../images/sprite.png', 'user', );
+$viber-name: 'viber';
+$viber-x: 22px;
+$viber-y: 27px;
+$viber-offset-x: -22px;
+$viber-offset-y: -27px;
+$viber-width: 17px;
+$viber-height: 17px;
+$viber-total-width: 85px;
+$viber-total-height: 67px;
+$viber-image: '../images/sprite.png';
+$viber: (22px, 27px, -22px, -27px, 17px, 17px, 85px, 67px, '../images/sprite.png', 'viber', );
+$spritesheet-width: 85px;
+$spritesheet-height: 67px;
 $spritesheet-image: '../images/sprite.png';
-$spritesheet-sprites: ($bank, $bank2, );
-$spritesheet: (53px, 24px, '../images/sprite.png', $spritesheet-sprites, );
+$spritesheet-sprites: ($ball-1, $card, $mail-active, $mail, $mtc, $search-active, $search, $telegram, $user-active, $user, $viber, );
+$spritesheet: (85px, 67px, '../images/sprite.png', $spritesheet-sprites, );
 
 // The provided mixins are intended to be used with the array-like variables
 //
