--- a/app/css/all.css
+++ b/app/css/all.css
@@ -97,6 +97,10 @@ article, aside, audio, canvas, datalist, details, figcaption, figure, footer, he
   position: relative;
 }
 
+#header .h-bottom .center {
+  position: relative;
+}
+
 #header .h-bottom:before {
   content: '';
   display: block;
@@ -105,9 +109,36 @@ article, aside, audio, canvas, datalist, details, figcaption, figure, footer, he
   height: 174px;
   left: 0;
   top: -174px;
-  background: url(../images/bg2.png) no-repeat 50% 0;
+  background: url(../images/bg2-small.png) no-repeat 50% 0;
   -webkit-background-size: auto 100%;
           background-size: auto 100%;
+}
+
+@media screen and (min-width: 1600px) {
+  #header .h-bottom:before {
+    background: url(../images/bg2.png) no-repeat 50% 0;
+  }
+}
+
+.btn-mob {
+  width: 30px;
+  height: 30px;
+  position: absolute;
+  top: 14px;
+  left: 15px;
+  display: none;
+  cursor: pointer;
+}
+
+.btn-mob span {
+  width: 100%;
+  height: 4px;
+  background: #fff;
+  display: block;
+}
+
+.btn-mob span + span {
+  margin-top: 5px;
 }
 
 .tel-list {
@@ -165,7 +196,7 @@ article, aside, audio, canvas, datalist, details, figcaption, figure, footer, he
 .etc-inf {
   position: absolute;
   top: 0;
-  right: 0;
+  right: 15px;
   color: #7c7c7c;
   font-weight: 600;
   font-size: 12px;
@@ -209,6 +240,7 @@ article, aside, audio, canvas, datalist, details, figcaption, figure, footer, he
 
 .nav-bar {
   width: 100%;
+  min-height: 51px;
 }
 
 .nav-bar:after {
@@ -219,7 +251,7 @@ article, aside, audio, canvas, datalist, details, figcaption, figure, footer, he
 
 .main-nav {
   margin: 0;
-  padding: 0;
+  padding: 0 208px 0 0;
   list-style: none;
   font-weight: 600;
   float: right;
@@ -227,6 +259,7 @@ article, aside, audio, canvas, datalist, details, figcaption, figure, footer, he
 
 .main-nav li {
   float: left;
+  min-height: 51px;
 }
 
 .main-nav li.active a {
@@ -235,7 +268,7 @@ article, aside, audio, canvas, datalist, details, figcaption, figure, footer, he
 
 .main-nav li a {
   color: #fff;
-  padding: 15px 30px;
+  padding: 16px 30px 15px;
   display: block;
   font-size: 14px;
   line-height: 20px;
@@ -251,8 +284,10 @@ article, aside, audio, canvas, datalist, details, figcaption, figure, footer, he
   margin: 0;
   padding: 0;
   list-style: none;
-  float: right;
-  position: relative;
+  position: absolute;
+  right: 0;
+  top: 0;
+  position: absolute;
 }
 
 .etc-nav li {
@@ -431,6 +466,78 @@ article, aside, audio, canvas, datalist, details, figcaption, figure, footer, he
   height: 38px;
   line-height: 38px;
   outline: none;
+}
+
+@media screen and (max-width: 1200px) {
+  .main-nav li a {
+    padding: 15px;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .main-nav li a {
+    font-size: 13px;
+  }
+}
+
+@media screen and (min-width: 961px) {
+  .main-nav-mob-holder {
+    display: block !important;
+  }
+}
+
+@media screen and (max-width: 960px) {
+  .btn-mob {
+    display: block;
+  }
+  .nav-bar {
+    min-height: auto;
+  }
+  .etc-nav .drop-cont {
+    width: 320px;
+  }
+  .main-nav-mob-holder {
+    display: none;
+  }
+  .h-bottom .center {
+    padding-top: 52px;
+  }
+  #header .h-top {
+    text-align: left;
+  }
+  .tel-list li {
+    padding-left: 0;
+    font-size: 13px;
+  }
+  .main-nav {
+    float: none;
+    border-top: 1px solid #fff;
+    padding: 0;
+    margin: 0 -15px;
+  }
+  .main-nav li {
+    float: none;
+  }
+  .main-nav li a {
+    display: block;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .etc-inf {
+    display: none;
+  }
+  #header .h-top {
+    text-align: center;
+  }
+  .logo {
+    width: 300px;
+    height: 64px;
+  }
+  .logo a {
+    -webkit-background-size: cover !important;
+            background-size: cover !important;
+  }
 }
 
 body {
